--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /[Ll]ibrary/
+/[Uu]serSettings/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
@@ -70,3 +71,30 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+# Windows
+Thumbs.db
+Thumbs.db.meta
+
+# MacOS
+*.DS_Store
+
+# VS Code
+*.vscode
+
+# Blender backups
+*.blend1
+
+# Substance Designer / Painter
+*.autosave
+*.painter_lock
+*autosave*
+
+# Temporary Model Files
+*.obj
+
+# Unity user settings for custom tools.
+/Assets/Settings/Editor/User/
+/Assets/Settings/Editor/User.meta
+
