--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.ncat.extensions",
   "version": "0.1.0",
-  "displayName": "NCat Gameframeworks",
+  "displayName": "NCat Extensions",
   "description": "This packages includes helpful extensions to Unity.",
   "unity": "2021.3",
   "keywords": [
